--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
   <body>
     <h1>Diseño de interfaces</h1>
+    <li>
+      <h2>Tema 0</h2>
+      <h2>Tema 1</h2>
+      <h2>Tema 2</h2>
+      <h2>Tema 3</h2>
+      <h2>Tema 4</h2>
+      <h2>Tema 5</h2>
+      <h2>Tema 6</h2>
+    </li>
     <a href="https://github.com/Diego2603/diegodelossantos.github.io/blob/main/1%C2%AA%20practica.pdf">Enlace practica 1.PDF</a>
   </body>
 </html>
