--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <li>Tema 4</li>
       <li>Tema 5</li>
       <li>Tema 6</li>
+      <li>Tema 7</li>
     </lu>
     <a href="https://github.com/Diego2603/diegodelossantos.github.io/blob/main/1%C2%AA%20practica.pdf">Enlace practica 1.PDF</a>
   </body>
