--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
   <body>
     <h1>Diseño de interfaces</h1>
     <ul>
-      <li>Tema 0</li>
-      <li>Tema 1</li>
-      <li>Tema 2</li>
-      <li>Tema 3</li>
-      <li>Tema 4</li>
-      <li>Tema 5</li>
-      <li>Tema 6</li>
+      <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema0.html"Tema 0></a></li>
+      <li><a href="">Tema 1</a></li>
+      <li><a href="">Tema 2</a></li>
+      <li><a href="">Tema 3</a></li>
+      <li><a href="">Tema 4</a></li>
+      <li><a href="">Tema 5</a></li>
+      <li><a href="">Tema 6</a></li>
     </lu>
     <a href="https://github.com/Diego2603/diegodelossantos.github.io/blob/main/1%C2%AA%20practica.pdf">Enlace practica 1.PDF</a>
   </body>
