--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <body>
     <h1>Diseño de interfaces</h1>
     <ul>
-      <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema0.html"Tema 0></a></li>
+      <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema0.html">Tema 0</a></li>
       <li><a href="">Tema 1</a></li>
       <li><a href="">Tema 2</a></li>
       <li><a href="">Tema 3</a></li>
