--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <h1>Diseño de interfaces</h1>
     <ul>
       <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema0.html">Tema 0</a></li>
-      <li><a href="">Tema 1</a></li>
-      <li><a href="">Tema 2</a></li>
-      <li><a href="">Tema 3</a></li>
-      <li><a href="">Tema 4</a></li>
-      <li><a href="">Tema 5</a></li>
-      <li><a href="">Tema 6</a></li>
+      <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema1.html">Tema 1</a></li>
+      <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema2.html">Tema 2</a></li>
+      <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema3.html">Tema 3</a></li>
+      <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema4.html">Tema 4</a></li>
+      <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema5.html">Tema 5</a></li>
+      <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema6.html">Tema 6</a></li>
     </lu>
     <a href="https://github.com/Diego2603/diegodelossantos.github.io/blob/main/1%C2%AA%20practica.pdf">Enlace practica 1.PDF</a>
   </body>
