--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <html>
-  <body>
-    <h1>Diseño de interfaces</h1>
-    <ul>
+  <head>
+  </head>
+
+  <body style="background-color: aqua; text-align: center;">
+
+    <h1 style="margin: 3%; font-size: 50; text">Diseño de interfaces</h1>
+
+    <a href="https://github.com/Diego2603/diegodelossantos.github.io/blob/main/1%C2%AA%20practica.pdf">Crear repositorio
+      en github.PDF</a>
+
+    <ul style="list-style: none; font-size: 20;"><H2>Indice</H2>
       <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema0.html">Tema 0</a></li>
       <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema1.html">Tema 1</a></li>
       <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema2.html">Tema 2</a></li>
@@ -9,7 +17,11 @@
       <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema4.html">Tema 4</a></li>
       <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema5.html">Tema 5</a></li>
       <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/Tema6.html">Tema 6</a></li>
-    </lu>
-    <a href="https://github.com/Diego2603/diegodelossantos.github.io/blob/main/1%C2%AA%20practica.pdf">Enlace practica 1.PDF</a>
+      </lu>
+
+      <ul style="list-style: none; font-size: 20;"><H2>Herramientas interesantes</H2>
+        <li><a href="https://github.com/diegodelosantos/Diegodelosantos.github.io/blob/main/HerramientaInteresante0.html">Tema 0</a></li>
+        </lu>
+
   </body>
 </html>
