--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <body style="background-color: aqua; text-align: center;">
 
-    <h1 style="margin: 3%; font-size: 50; text">Diseño de interfaces</h1>
+    <h1 style="margin: 3%; font-size: 50;">Diseño de interfaces</h1>
 
     <a href="https://github.com/Diego2603/diegodelossantos.github.io/blob/main/1%C2%AA%20practica.pdf">Crear repositorio
       en github.PDF</a>
