--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <h1 style="margin: 3%; font-size: 50;">Diseño de interfaces</h1>
 
-    <a href="https://github.com/Diego2603/diegodelossantos.github.io/blob/main/1%C2%AA%20practica.pdf">Crear repositorio
+    <a href="1ª practica.pdf">Crear repositorio
       en github.PDF</a>
 
     <ul style="list-style: none; font-size: 20;"><H2>Indice</H2>
