--- a/Practica0.html
+++ b/Practica0.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: rgb(39, 192, 192);">
     <a href="1ª practica.pdf">Crear repositorio en github.PDF</a>
   
 </body>
