--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a>Tema 0</a>
           </summary>
           <a href="Tema0.html" style="margin-left: 1.5cm;"">Documentaci&oacute;n</a><br>
-          <a href="HerramientaInteresante0.html" style="margin-left: 1.5cm;">Herramientas </a><br>
+          <a href="HerramientaInteresante0.html" style="margin-left: 1.5cm;">Herramientas interesante</a><br>
           <a href="Practica0.html" style="margin-left: 1.5cm;">Practicas</a>
         </details>
       </li>
