--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <li>
         <details>
           <summary>
-            <a href="Tema2.html">Tema 2</a>
+            <a>Tema 2</a>
           </summary>
           <a href="Tema2.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a><br>
           <!-- <a href="HerramientaInteresante0.html">Herramienta Interesante</a> -->
@@ -38,7 +38,7 @@
       <li>
         <details>
           <summary>
-            <a href="Tema3.html">Tema 3</a>
+            <a>Tema 3</a>
           </summary>
           <a href="Tema3.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a><br>
           <!-- <a href="HerramientaInteresante0.html">Herramienta Interesante</a> -->
@@ -47,7 +47,7 @@
       <li>
         <details>
           <summary>
-            <a href="Tema4.html">Tema 4</a>
+            <a>Tema 4</a>
           </summary>
           <a href="Tema4.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a><br>
           <!-- <a href="HerramientaInteresante0.html">Herramienta Interesante</a> -->
@@ -56,7 +56,7 @@
       <li>
         <details>
           <summary>
-            <a href="Tema5.html">Tema 5</a>
+            <a>Tema 5</a>
           </summary>
           <a href="Tema5.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a><br>
           <!-- <a href="HerramientaInteresante0.html">Herramienta Interesante</a> -->
@@ -65,7 +65,7 @@
       <li>
         <details>
           <summary>
-            <a href="Tema6.html">Tema 6</a>
+            <a>Tema 6</a>
           </summary>
           <a href="Tema6.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a><br>
           <!-- <a href="HerramientaInteresante0.html">Herramienta Interesante</a> -->
