--- a/HerramientaInteresante0.html
+++ b/HerramientaInteresante0.html
@@ -11,7 +11,7 @@
         <summary>
             <a style="font-size: 01cm;">HTML Tips</a>
         </summary>
-            <details>
+            <details style="margin-left: 1.5cm;">
                 <summary>
                     <a>Aplazar la carga de la imagen hasta que el usuario llegue a la imagen</a>
                     
@@ -19,7 +19,7 @@
                 <p><img src='image.jpg' loading='lazy' alt='Imagen no encontrada'></p>
                 <pre>&lt;p&gt;&lt;img src='image.jpg' loading='lazy' alt='Imagen no encontrada'&gt;&lt;/p&gt;</pre>
             </details>
-            <details>
+            <details style="margin-left: 1.5cm;">
                 <summary>
                     <a>Enlace para correo electronico</a>
                 </summary>
@@ -32,7 +32,7 @@
                     </pre>
                 </p>
             </details>
-            <details>
+            <details style="margin-left: 1.5cm;">
                 <summary>
                     <a>Enlace para llamar</a> 
                 </summary>
@@ -45,7 +45,7 @@
                     &lt;p&gt;&lt;a href="tel:{phone}"Llamarbr&gt;&lt;/p&gt;
                 </PRE>
             </details>
-            <details>
+            <details style="margin-left: 1.5cm;">
                 <summary>
                     <a>Enlace para enviar un mensaje</a>
                 </summary>
@@ -58,7 +58,7 @@
                     &lt;p&gt;&lt;a href="sms:{phone}?body={content}&gt;"Enviar mensajebr&lt;/p&gt;
                 </pre>
             </details>
-            <details>
+            <details style="margin-left: 1.5cm;">
                 <summary>
                     <a>test</a>
                 </summary>
