--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           <summary>
             <a>Tema 0</a>
           </summary>
-          <a href="Tema0.html" style="margin-left: 1.5cm;"">Documentaci&oacute;n</a><br>
+          <a href="Tema0.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a><br>
           <a href="HerramientaInteresante0.html" style="margin-left: 1.5cm;">Herramientas interesante</a><br>
           <a href="Practica0.html" style="margin-left: 1.5cm;">Practicas</a>
         </details>
