--- a/HerramientaInteresante0.html
+++ b/HerramientaInteresante0.html
@@ -17,7 +17,7 @@
                     
                 </summary>
                 <p style="font-size:0.4cm;">
-                    <img src='image.jpg' loading='lazy' alt='Imagen no encontrada'><br>
+                    <img src='image.jpg' loading='lazy' alt='Imagen no encontrada'>"<br>"
                     &lt;p&gt;&lt;img src='image.jpg' loading='lazy' alt='Imagen no encontrada'&gt;&lt;/p&gt;
                 </p>
             </details>
@@ -27,7 +27,7 @@
                 </summary>
                 <p style="font-size:0.4cm;">
                     <a href="mailto:{email}?subject={subject}&body={content}">
-                        Enviar correo electronico<br>
+                        Enviar correo electronico"<br>"
                     </a>
 
                         &lt;p&gt;&lt;a href="mailto:{email}?subject={subject}&body={content}&gt;"Enviar correo electronicobr&lt;/p&gt;
@@ -40,7 +40,7 @@
                 </summary>
                 <p style="font-size:0.4cm;">
                     <a href="tel:{phone}">
-                        Llamar<br>
+                        Llamar"<br>"
                     </a>
 
                         &lt;p&gt;&lt;a href="tel:{phone}"Llamarbr&gt;&lt;/p&gt;
@@ -52,7 +52,7 @@
                 </summary>
                 <p style="font-size:0.4cm;">
                     <a href="sms:{phone}?body={content}">
-                    Enviar mensaje<br>
+                    Enviar mensaje"<br>"
                     </a>
                 
 
