--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
       <ul style="list-style: none; font-size: 20;"><H2>Herramientas interesantes</H2>
         <li><a href="HerramientaInteresante0.html">Herramienta Interesante 0</a></li>
+        <li><a href="HerramientaInteresante0.1.html">Herramienta Interesante 0-1</a></li>
       </lu>
 
   </body>
