--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
           <summary>
             <a>Tema 0</a>
           </summary>
-          <a href="Tema0.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a>"<br>"
-          <a href="HerramientaInteresante0.html" style="margin-left: 1.5cm;">Herramientas interesante</a>"<br>"
+          <a href="Tema0.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a><br>"
+          <a href="HerramientaInteresante0.html" style="margin-left: 1.5cm;">Herramientas interesante</a><br>"
           <a href="Practica0.html" style="margin-left: 1.5cm;">Practicas</a>
         </details>
       </li>
@@ -21,7 +21,7 @@
           <summary>
             <a>Tema 1</a>
           </summary>
-            <a href="Tema1.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a>"<br>"
+            <a href="Tema1.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a><br>"
             <!-- <a href="HerramientaInteresante0.html" style="margin-left: 1.5cm;">Herramientas </a>"<br>"
             <a href="Practica0.html" style="margin-left: 1.5cm;">Practicas</a> -->
         </details>
@@ -31,7 +31,7 @@
           <summary>
             <a>Tema 2</a>
           </summary>
-          <a href="Tema2.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a>"<br>"
+          <a href="Tema2.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a><br>"
           <!-- <a href="HerramientaInteresante0.html">Herramienta Interesante</a> -->
         </details>
       </li>
@@ -40,7 +40,7 @@
           <summary>
             <a>Tema 3</a>
           </summary>
-          <a href="Tema3.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a>"<br>"
+          <a href="Tema3.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a><br>"
           <!-- <a href="HerramientaInteresante0.html">Herramienta Interesante</a> -->
         </details>
       </li>
@@ -49,7 +49,7 @@
           <summary>
             <a>Tema 4</a>
           </summary>
-          <a href="Tema4.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a>"<br>"
+          <a href="Tema4.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a><br>"
           <!-- <a href="HerramientaInteresante0.html">Herramienta Interesante</a> -->
         </details>
       </li>
@@ -58,7 +58,7 @@
           <summary>
             <a>Tema 5</a>
           </summary>
-          <a href="Tema5.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a>"<br>"
+          <a href="Tema5.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a><br>"
           <!-- <a href="HerramientaInteresante0.html">Herramienta Interesante</a> -->
         </details>
       </li>
@@ -67,7 +67,7 @@
           <summary>
             <a>Tema 6</a>
           </summary>
-          <a href="Tema6.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a>"<br>"
+          <a href="Tema6.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a><br>"
           <!-- <a href="HerramientaInteresante0.html">Herramienta Interesante</a> -->
         </details>
       </li>
@@ -75,7 +75,7 @@
 
       <ul style="list-style: none; font-size: 20;"><H2>Herramientas interesantes</H2>
         <li><a href="HerramientaInteresante0.html">Herramienta Interesante 0</a></li>
-        <li><a href="HerramientaInteresante0.1.html">Herramienta Interesante 0-1</a></li>
+        <li><a href="HerramientaInteresante0.1.html">Herramienta Interesante 0_1</a></li>
       </lu>
 
   </body>
