--- a/Practica0.html
+++ b/Practica0.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color: rgb(39, 192, 192);">
     <a href="1ª practica.pdf">Crear repositorio en github.PDF</a>
-    <a href="2ª practica.pdf">Crear repositorio en github.PDF</a>
+    <a href="2ª practica.pdf">Web seleccionadas.PDF</a>
   
 </body>
 </html>
