--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1 style="margin: 3%; font-size: 50;">Diseño de interfaces</h1>
     <ul style="list-style: none; font-size: 20;"><H2>Indice</H2>
       <li>
-        <details>
+        <details style="font-size:0.5cm;margin-left: 1cm;">
           <summary>
             <a>Tema 0</a>
           </summary>
@@ -17,7 +17,7 @@
         </details>
       </li>
       <li>
-        <details>
+        <details style="font-size:0.5cm;margin-left: 1cm;">
           <summary>
             <a>Tema 1</a>
           </summary>
@@ -27,7 +27,7 @@
         </details>
       </li>
       <li>
-        <details>
+        <details style="font-size:0.5cm;margin-left: 1cm;">
           <summary>
             <a>Tema 2</a>
           </summary>
@@ -36,7 +36,7 @@
         </details>
       </li>
       <li>
-        <details>
+        <details style="font-size:0.5cm;margin-left: 1cm;">
           <summary>
             <a>Tema 3</a>
           </summary>
@@ -45,7 +45,7 @@
         </details>
       </li>
       <li>
-        <details>
+        <details style="font-size:0.5cm;margin-left: 1cm;">
           <summary>
             <a>Tema 4</a>
           </summary>
@@ -54,7 +54,7 @@
         </details>
       </li>
       <li>
-        <details>
+        <details style="font-size:0.5cm;margin-left: 1cm;">
           <summary>
             <a>Tema 5</a>
           </summary>
@@ -63,7 +63,7 @@
         </details>
       </li>
       <li>
-        <details>
+        <details style="font-size:0.5cm;margin-left: 1cm;">
           <summary>
             <a>Tema 6</a>
           </summary>
