--- a/HerramientaInteresante0.html
+++ b/HerramientaInteresante0.html
@@ -166,9 +166,9 @@
             <details style="font-size:0.5cm;margin-left: 1cm;">
                 <summary>
                     <a>Para abrir una web en otra pestaña:</a><br>
-                    <a href="https://www.youtube.com/" target="_blank" rel="noopener">YouTube</a>
+                    <a href="https://markodenic.com/html-tips/" target="_blank" rel="noopener">markodenic</a>
                 </summary><br>
-                &lt;a href="https://www.youtube.com/" target="_blank" rel="noopener"&gt;YouTube&lt;/a&gt;
+                &lt;a href="https://markodenic.com/html-tips/" target="_blank" rel="noopener"&gt;markodenic&lt;/a&gt;
             </details>
         
         
@@ -223,18 +223,19 @@
             </details>
             <details style="font-size:0.5cm;margin-left: 1cm;">
                 <summary> 
+                    <a>Formulario: </a><br>
                     <form>
-                        <label for="text">Primer Input</label>
+                        <label for="text">Input Type Text</label>
                         <input for="text" id="text" name="text"></input>
 
-                        <label for="search">Segundo Input</label>
+                        <label for="search">Input Type Search</label>
                         <input for="search" id="search" name="search"></input>
                     </form>
                 </summary>
                 &lt;form&gt;
-                    &lt;label for="text"&gt;Primer Input&lt;/label&gt;
+                    &lt;label for="text"&gt;Input Type Text&lt;/label&gt;
                     &lt;input for="text" id="text" name="text"&gt;
-                    &lt;label for="search"&gt;Segundo Input&lt;/label&gt;
+                    &lt;label for="search"&gt;Input Type Search&lt;/label&gt;
                     &lt;input for="search" id="search" name="search"&gt;
                 &lt;/form&gt;
             </details>
