--- a/HerramientaInteresante0.html
+++ b/HerramientaInteresante0.html
@@ -152,14 +152,14 @@
                 &lt;fieldset&gt;
                 &lt;legend>&lt;b&gt;Elige tu color favorito&lt;/b&gt;&lt;/legend&gt;
 
-                &lt;input  type="radio" id="rojo" name="color"&gt;
-                &lt;label for="rojo"&gt;Rojo&lt;/label>&lt;br&gt;
+                &lt;input  type="radio" id="javascript" name="language"&gt;
+                &lt;label for="javascript"&gt;JavaScript&lt;/label>&lt;br&gt;
 
-                &lt;input  type="radio" id="azul" name="color"&gt;
-                &lt;label for="azul"&gt;Azul&lt;/label>&lt;br&gt;
+                &lt;input  type="radio" id="python" name="language"&gt;
+                &lt;label for="python"&gt;Python&lt;/label>&lt;br&gt;
 
-                &lt;input  type="radio" id="verde" name="color"&gt;
-                &lt;label for="verde"&gt;Verde&lt;/label&gt;
+                &lt;input  type="radio" id="java" name="language"&gt;
+                &lt;label for="java"&gt;Java&lt;/label&gt;
                 &lt;/fieldset&gt;
                 &lt;/form&gt;
             </details>
