--- a/Practica0.html
+++ b/Practica0.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body style="background-color: rgb(39, 192, 192);">
-    <a href="../Plantilla trabajo.docx">Plantilla</a><br>
+    <a href="../Plantilla trabajo.pdf">Plantilla</a><br>
     <a href="1ª practica.pdf">Crear repositorio en github.PDF</a><br>
     <a href="2ª practica.pdf">Web seleccionadas.PDF</a>
   
