--- a/Tema1.html
+++ b/Tema1.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 1</title>
 </head>
-<body>
-    
-    
+<body style="background-color: rgb(39, 192, 192);">
+    <a href="../HrPower.pdf">Entrevista</a><br>
+  
 </body>
 </html>
