--- a/Tema1.html
+++ b/Tema1.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color: rgb(39, 192, 192);">
     <a href="../HrPower.pdf">Entrevista</a><br>
-    <a href="https://mycolor.space/">Colores</a><br>
+    <a href="https://mycolor.space/">Herramienta de Colores</a><br>
   
 </body>
 </html>
