--- a/Tema1.html
+++ b/Tema1.html
@@ -6,7 +6,7 @@
     <title>Tema 1</title>
 </head>
 <body style="background-color: rgb(39, 192, 192);">
-    <a href="../HrPower.pdf">Entrevista</a><br>
+    <a href="../Coolfee.pdf">Entrevista</a><br>
     <a href="https://mycolor.space/">Herramienta de Colores</a><br>
   
 </body>
