--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <summary>
             <a>Tema 1</a>
           </summary>
-            <a href="Tema1.html" style="margin-left: 1.5cm;">Documentaci&oacute;n</a><br>
+            <a href="Tema1.html" style="margin-left: 1.5cm;">Practicas</a><br>
             <!-- <a href="HerramientaInteresante0.html" style="margin-left: 1.5cm;">Herramientas </a>"<br>"
             <a href="Practica0.html" style="margin-left: 1.5cm;">Practicas</a> -->
         </details>
