--- a/Practica0.html
+++ b/Practica0.html
@@ -9,6 +9,8 @@
     <a href="../Plantilla trabajo.pdf">Plantilla</a><br>
     <a href="1ª practica.pdf">Crear repositorio en github.PDF</a><br>
     <a href="2ª practica.pdf">Web seleccionadas.PDF</a>
+    <a href="Practica3.html">HTML Tips</a>
+    
   
 </body>
 </html>
