--- a/SASS/Project1/index.html
+++ b/SASS/Project1/index.html
@@ -13,9 +13,7 @@
 
     <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam provident doloribus incidunt ipsa veniam saepe nobis, repudiandae aliquid a obcaecati. Maxime ab aspernatur ad reprehenderit exercitationem enim nemo dolor corporis.</h1>
     
-    <button style="btn=sc">hola</button>
-    
-    <!-- <div class="row">
+<div class="row"
 
         <div class="btn btn-sm btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                 fill="currentColor" class="bi bi-amazon" viewBox="0 0 16 16">
@@ -27,7 +25,7 @@
         <div class="btn btn-sm btn-info"><i class="bi-alarm"></i> </div>
         <div class="btn btn-sm btn-danger"><i class="bi bi-whatsapp"></i></div>
         <div class="btn btn-sm btn-secundary"><i class="bi bi-cart"></i> </div>
-    </div>-->
+    </div>
 </body>
 
 </html>
